--- a/UI/assets/css/app.css
+++ b/UI/assets/css/app.css
@@ -100,7 +100,7 @@ body{
     border-right:1px solid black;
     margin-top: 8px;
     margin-bottom: 8px;
-    overflow: auto;
+    max-width: 200px;
 
 }
 .nav_item{
@@ -116,7 +116,7 @@ body{
     padding: 24px 24px;
     text-decoration: none;
     width: calc(100% - 48px);
-    height: calc(100% - 48px);
+    /*height: calc(100% - 48px);*/
 
 
 }
@@ -156,7 +156,7 @@ body{
     padding: 8px;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     transition: all 0.3s cubic-bezier(.25,.8,.25,1);
-
+  overflow: auto;
 }
 
 
@@ -219,12 +219,11 @@ body{
     padding: 0 8px;
 }
 .list{
-
-
     /*max-height: calc(100% - 100px);*/
+    overflow: auto;
 }
-.action_btn{
 
+.action_btn{
     background-color: blue;
     padding: 2px 8px 2px 8px;
     border-width: 1px;
@@ -232,15 +231,35 @@ body{
     border-color: transparent;
     border-radius: 4px;
     color: white;
+    min-width: 64px;
+    min-height: 36px;
 }
 .action_btn_light{
-    background-color: white;
+    background-color: deeppink;
     padding: 2px 8px 2px 8px;
     border-width: 1px;
     border-style: solid;
-    border-color: black;
+    border-color: transparent;
     border-radius: 4px;
-    color: black;
+    color: white;
+    min-width: 64px;
+    min-height: 36px;
+}
+.flex-warp{
+    flex-wrap: wrap;
+}
+.field_name{
+    font-size: 14px;
+    font-weight: 400;
+}
+.value{
+    font-weight: 500;
+}
+.padding{
+    padding: 24px;
+}
+.over-line{
+    font-size: 10px;
 }
 .menu_text{
 
@@ -257,7 +276,7 @@ body{
     }
 
     .nav_item a{
-        padding: 12px;
+        /*padding: 12px;*/
     }
     .nav_item a img{
         padding-right: 6px;
@@ -266,19 +285,24 @@ body{
         padding: 14px 12px;
     }
 }
+.hide_on_small_xs{
+
+}
 
 @media screen and (max-width: 425px) {
     .nav_item a{
         padding: 12px 12px;
-        width: calc(100% - 24px);
+       width: calc(100% - 24px);
     }
     .nav_item a img{
         padding-right: 0px;
     }
-    .menu{
-        padding: 14px 6px;
+
+    .hide_on_small_xs{
+        display: none;
     }
 }
+
 
 
 .slider{
@@ -286,7 +310,6 @@ body{
     width:calc(100% - 20px);
     height:5px;
     overflow-x: hidden;
-
     margin: 8px 8px;
 }
 
