feature(back button on loan details): complete

--- a/UI/assets/css/app.css
+++ b/UI/assets/css/app.css
@@ -163,7 +163,11 @@ body{
 .card:hover {
     box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
-
+.close{
+    height: 32px;
+    width: 32px;
+    padding: 8px;
+}
 .app_title{
     padding: 24px;
 }
